trunk/Archive2/8e/c3d91ca9333478/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:1: error: 'vs' does not name a type
 vs.Source(" \
 ^
main.cpp:12:1: error: 'vs' does not name a type
 vs.Compile();
 ^
main.cpp:13:1: error: 'fs' does not name a type
 fs.Source(" \
 ^
